--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <form id="create-task-form" action="#" method="post">
       <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input type="text" id="new-task-description" name="newTaskDescription" placeholder="description">
       <input type="submit" value="Create New Task">
     </form>
 
     <div id="list">
       <h2>My Todos</h2>
       <ul id="tasks">
+        <li> newTask </li>
       </ul>
     </div>
 
